# watermark-devil

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
config/: example.env
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  api.yaml
examples/: README.md  api_usage.py  cli_usage.rs
setup/: README.md  __init__.py  build.py  install.py
src/: config.py  lib.rs  types.rs
src/api/: concurrency.py  errors.py  main.py  middleware.py  models.py  processing.py  rate_limiter.py  validation.py
src/cli/: README.md  __init__.py  main.py  main.rs
src/cli/py/: README.md  __init__.py
src/db/: __init__.py  database.py  models.py
src/engine/: config.rs  error.rs  lib.rs
src/engine/detection/: bindings.rs  frequency.rs  mod.rs  models.rs  neural.rs  patterns.rs
src/engine/learning/: analyzer.rs  collector.rs  config.rs  database.rs  ffi.rs  metrics.rs  mod.rs  models.rs  trainer.rs  utils.rs
src/engine/optimization/: cuda.rs  mod.rs  parallel.rs  simd.rs
src/engine/reconstruction/: diffusion.rs  frequency.rs  inpainting.rs  mod.rs
src/engine/video/: decoder.rs  encoder.rs  mod.rs  processor.rs  streaming.rs  temporal.rs
src/ml/: __init__.py  config.py
src/ml/models/: base.py  detector.py
src/ml/models/logo_detector/: __init__.py  config.py  model.py  utils.py
src/ml/models/pattern_detector/: __init__.py  model.py
src/ml/models/text_detector/: __init__.py  model.py
src/ml/models/transparency_detector/: __init__.py  model.py
src/ml/training/: __init__.py  adaptive_trainer.py  trainer.py
src/monitoring/: alerts.py  logger.py  metrics.py  profiler.py  tracing.py
tests/: detection.rs  test_api.py  test_engine.rs  test_ml_models.py  test_ml_training.py
tests/api/: test_api.py
tests/integration/: test_detection.py  test_pipeline.py
tests/integration/resources/: create_test_images.py
