[package]
name = "watermark-evil"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Advanced watermark detection and removal tool"

[dependencies]
# Core
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
async-trait = "0.1.74"

# Error Handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Configuration
config = "0.13.4"
dotenv = "0.15.0"

# Image Processing
image = "0.24.7"
imageproc = "0.23.0"
opencv = { version = "0.84.5", features = ["clang-runtime"] }
rusttype = "0.9.3"

# Machine Learning
tch = "0.13.0"  # PyTorch bindings
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"

# Storage
aws-sdk-s3 = "1.7.0"
azure_storage = "0.10.0"
bytes = "1.5.0"

# Monitoring
prometheus = "0.13.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Testing
criterion = "0.5.1"
tempfile = "3.8.1"
mockall = "0.12.1"

# CLI
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"

[build-dependencies]
cmake = "0.1.50"

[features]
default = ["gpu"]
gpu = ["tch/cuda"]
cpu-only = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "processing"
harness = false
