[package]
name = "watermark-evil"
version = "0.1.0"
edition = "2021"
authors = ["Abdou-Raouf ATARMLA <achilleatarmla@gmail.com>"]
description = "Advanced watermark detection and removal tool"

[[bin]]
name = "watermark-evil"
path = "src/cli/main.rs"

[lib]
name = "watermark_evil"
path = "src/lib.rs"

[dependencies]
# Core
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.29"
async-trait = "0.1.74"

# CLI
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.24"
imageproc = "0.23.0"
opencv = { version = "0.84.5", features = ["clang-runtime"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0.50"

# Web
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors"] }
tower = "0.4.13"

# Utils
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tempfile = "3.8.1"
mockall = "0.12.1"

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
